kubernetes/environments/staging/patches/namespace-labels.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  labels:
    lattix.io/mesh: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: services
  labels:
    lattix.io/mesh: enabled
